final multi-counter-project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Love Bubber MultiDigitCounter</title>
+    <title>MultiDigitCounter</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -35,6 +35,6 @@
         <p class="next"> 1 </p>
        </div>
     </div>
-    <script src="script.js"></script>
+    <script type = "text/javascript" src="script.js"></script>
   </body>
 </html>
